# sphinx-guru-builder

./: README.md  pyproject.toml  setup.py
sphinx_guru_builder/: __init__.py
sphinx_guru_builder/theme/: layout.html  theme.conf
