[tool.poetry]
name = "sphinx-guru-builder"
version = "0.1.1"
description = "Sphinx Builder for Guru"
authors = ["Jean-Martin Archer <jm@jmartin.ca>"]
readme = "README.md"
license = "BSD-2"
repository = "https://github.com/j-martin/sphinx-guru-builder"

[tool.poetry.dependencies]
python = "^3.6"
pyaml = "^20.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
